Add data economia

--- a/Multilabel classification Analysis.ipynb
+++ b/Multilabel classification Analysis.ipynb
@@ -2,6 +2,85 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get data to work with\n",
+    "\n",
+    "from observatorio_laboral.offer.offer_controller import OfferController\n",
+    "from observatorio_laboral.offer.date_range import DateRange\n",
+    "\n",
+    "text_fields = []\n",
+    "oc = OfferController(text_fields = [\"Job Title\", \"Description\", \"Qualifications\", \"Software\"])\n",
+    "date_range = DateRange(1, 2013, 5, 2017)\n",
+    "source = \"symplicity\"\n",
+    "\n",
+    "oc.load_offers(source, date_range)\n",
+    "oc.filter_offers_by_career(\"ECONOMÍA\")\n",
+    "all_offers = oc.offers\n",
+    "oc.filter_offers_by_field(\"Areas\")\n",
+    "\n",
+    "offer_texts = oc.get_text()\n",
+    "offer_classes = oc.get_field_labels(\"Areas\")\n",
+    "\n",
+    "data = offer_texts\n",
+    "classes = offer_classes\n",
+    "print(len(data))\n",
+    "print(len(all_offers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 239,
    "metadata": {},
    "outputs": [
@@ -16,7 +95,6 @@
    ],
    "source": [
     "# Get data to work with\n",
-    "\n",
     "\n",
     "from observatorio_laboral.offer.offer_controller import OfferController\n",
     "from observatorio_laboral.offer.date_range import DateRange\n",
